# UselessIDE

./: .gitignore  CMakeLists.txt  README.md
FluentUI/: .gitignore  .gitmodules  CMakeLists.txt  License  README.md  README_zh_CN.md  THIRD_PARTY_COPYRIGHT.txt
FluentUI/.cmake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  QmlPlugin.cmake  Version.h.in  version_dll.rc.in  version_exe.rc.in
FluentUI/.github/workflows/: macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
FluentUI/doc/md/: all_components.md
FluentUI/example/: CMakeLists.txt  resource.qrc
FluentUI/example/qml/: App.qml
FluentUI/example/qml-Qt6/: App.qml
FluentUI/example/qml-Qt6/component/: CodeExpander.qml  CustomWindow.qml
FluentUI/example/qml-Qt6/global/: ItemsFooter.qml  ItemsOriginal.qml  MainEvent.qml  qmldir
FluentUI/example/qml-Qt6/page/: T_Acrylic.qml  T_Awesome.qml  T_Badge.qml  T_BreadcrumbBar.qml  T_Buttons.qml  T_CalendarPicker.qml  T_Captcha.qml  T_Carousel.qml  T_Chart.qml  T_CheckBox.qml  T_ColorPicker.qml  T_ComboBox.qml  T_DatePicker.qml  T_Dialog.qml  T_Expander.qml  T_FlipView.qml  T_Home.qml  T_Http.qml  T_Image.qml  T_InfoBar.qml  T_Menu.qml  T_MultiWindow.qml  T_Pagination.qml  T_Pivot.qml  T_Progress.qml  T_QRCode.qml  T_RadioButton.qml  T_RatingControl.qml  T_Rectangle.qml  T_RemoteLoader.qml  T_Screenshot.qml  T_Settings.qml  T_Slider.qml  T_StaggeredView.qml  T_StatusView.qml  T_TabView.qml  T_TableView.qml  T_Text.qml  T_TextBox.qml  T_Theme.qml  (+8 more)
FluentUI/example/qml-Qt6/window/: AboutWindow.qml  HotloadWindow.qml  LoginWindow.qml  MainWindow.qml  PageWindow.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
FluentUI/example/qml/component/: CodeExpander.qml  CustomWindow.qml
FluentUI/example/qml/global/: ItemsFooter.qml  ItemsOriginal.qml  MainEvent.qml
FluentUI/example/qml/page/: T_Acrylic.qml  T_Awesome.qml  T_Badge.qml  T_BreadcrumbBar.qml  T_Buttons.qml  T_CalendarPicker.qml  T_Captcha.qml  T_Carousel.qml  T_Chart.qml  T_CheckBox.qml  T_ColorPicker.qml  T_ComboBox.qml  T_DatePicker.qml  T_Dialog.qml  T_Expander.qml  T_FlipView.qml  T_Home.qml  T_Http.qml  T_Image.qml  T_InfoBar.qml  T_Menu.qml  T_MultiWindow.qml  T_Pagination.qml  T_Pivot.qml  T_Progress.qml  T_QRCode.qml  T_RadioButton.qml  T_RatingControl.qml  T_Rectangle.qml  T_RemoteLoader.qml  T_Screenshot.qml  T_Settings.qml  T_Slider.qml  T_StaggeredView.qml  T_StatusView.qml  T_TabView.qml  T_TableView.qml  T_Text.qml  T_TextBox.qml  (+9 more)
FluentUI/example/src/: AppInfo.cpp  AppInfo.h  main.cpp  stdafx.h
FluentUI/framelesshelper/: .gitignore  .gitmodules  CMakeLists.txt  FramelessHelperConfig.cmake.in  LICENSE  README.md
FluentUI/framelesshelper/cmake/: LICENSE  LLVM-Install.bat  README.md  VC-LTL.cmake  YY-Thunks-Install.bat  YY-Thunks.cmake  setup-proxy.bat  setup-proxy.ps1  utils.cmake
FluentUI/framelesshelper/examples/: CMakeLists.txt
FluentUI/framelesshelper/msbuild/: FramelessHelper.props
FluentUI/framelesshelper/qmake/: core.pri  quick.pri  widgets.pri
FluentUI/framelesshelper/src/: CMakeLists.txt
FluentUI/scripts/: windows-mingw-publish.ps1  windows-publish.ps1
FluentUI/src/: CMakeLists.txt  Def.cpp  Def.h  FluApp.cpp  FluApp.h  FluCaptcha.cpp  FluCaptcha.h  FluColorSet.cpp  FluColorSet.h  FluColors.cpp  FluColors.h  FluHttp.cpp  FluHttp.h  FluHttpInterceptor.cpp  FluHttpInterceptor.h  FluRegister.cpp  FluRegister.h  FluTextStyle.cpp  FluTextStyle.h  FluTheme.cpp  FluTheme.h  FluTools.cpp  FluTools.h  FluWatermark.cpp  FluWatermark.h  MainThread.cpp  MainThread.h  QRCode.cpp  QRCode.h  Screenshot.cpp  Screenshot.h  WindowHelper.cpp  WindowHelper.h  fluentuiplugin.cpp  fluentuiplugin.h  resource.qrc
FluentUI/zxing-cpp/: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  zxing.cmake
FluentUI/zxing-cpp/.github/: FUNDING.yml
FluentUI/zxing-cpp/core/: CMakeLists.txt  ZXVersion.h.in  ZXingConfig.cmake.in  zxing.pc.in
FluentUI/zxing-cpp/example/: CMakeLists.txt  ZXingOpenCV.cpp  ZXingOpenCV.h  ZXingQt5CamReader.qml  ZXingQt6CamReader.qml  ZXingQtCamReader.cpp  ZXingQtCamReader.qrc  ZXingQtReader.cpp  ZXingQtReader.h  ZXingQtWriter.cpp  ZXingReader.cpp  ZXingWriter.cpp
src/: AppInfo.cpp  AppInfo.h  CMakeLists.txt  main.cpp
src/component/: CircularReveal.cpp  CircularReveal.h  codeformatter.cpp  codeformatter.h  compiler.cpp  compiler.h  cursorcommand.cpp  cursorcommand.h  filemanager.cpp  filemanager.h  highlighter.cpp  highlighter.h
src/global/: store.cpp  store.h
src/lang/: En.cpp  Lang.h  Zh.cpp
src/res/ui_data/: output.txt
src/test/: CMakeLists.txt  testcompiler.cpp  testui.cpp
src/ui/: App.qml  UiDesignRules.md
src/ui/component/: CustomTreeView.qml  CustomWindow.qml  EditorBar.qml  EditorTabView.qml  FootBar.qml  IssuesList.qml  IssuesTableView.qml  LineNumberEditor.qml  MainBar.qml  MenuBar.qml  OutputTextArea.qml  SearchTabView.qml  SideBar.qml  StatusBar.qml  ToolBar.qml
src/ui/window/: AboutWindow.qml  MainWindow.qml  SearcherWindow.qml  SettingWindow.qml
(+750 files in other folders)
